<resources>
    <string name="app_name">CopWatch</string>
    <string name="app_terms_and_conditions">Agree to our <font color="#26c6da">Terms and Conditions</font> and
        <font color="#26c6da">Privacy Policy</font></string>

    <!--OnBoarding Screens-->
    <string name="app_onboarding_one">CopWatch was created to help document, prosecute and reduce cases of police
        brutality and gross civil rights violations.</string>
    <string name="app_onboarding_two">Activate CopWatch if and when you encounter law enforcement with voice activated
        discreet recordings that auto-load to your cloud securely. Thus giving you tamper proof recordings.</string>
    <string name="app_onboarding_three">Further protections include checkpoint and speed-trap notifications. As well
        as a news feed and a VLOG where you can share your CopWatch footage and see others stories and videos. </string>
    <string name="app_message_to_users">\"Being no stranger to police violence, we have such a passion to see every
        power-abusing, overly violent, law-breaking law enforcement officer reprimanded or retired from duty. We
        believe that every person regardless of their race, religion, income or educational background or mental capacity
        should still be able to exercise their rights and more importantly not have their civil rights violated. There is
        a system in place regardless of how broken that system is. It is not in a police officer\'s scope of duties to be
        the jury, judge and in some cases, the executioner. We believe the only way is to record them from every angle all
        the time. There are over 300 million people in the United States alone. That means there are probably well over
        200 million cell phones commuting across the country every day. We need to do what their badge cams were supposed
        to do and record every interaction with the police. It\'s time those responsible for upholding the law actually
        adhered to it too.\" \n\n-CopWatch</string>
    <string name="app_about_us">Our ultimate goal is to stop police violence and see that our constitutional
        rights are protected. Its time those tasked with upholding the law actually adhered to it too. Downloading and
        using this app is a great first step, but it only works if we all do it. SPREAD THE MESSAGE!!\n\n
        --- #COPWATCH --- \nfree to join and free to use!</string>


    <!--Facebook-->
    <string name="facebook_app_id">868410380627318</string>
    <string name="fb_login_protocol_scheme">fb868410380627318</string>

    <!--Headers-->
    <string name="head_privacy_policy">Privacy Policy</string>
    <string name="head_terms_and_conditions">Terms and Conditions</string>
    <string name="head_advance_permission">Advance Permissions</string>
    <string name="head_forget_password">Forget Password</string>
    <string name="head_mode_selection">Mode Selection</string>
    <string name="head_permissions">Permissions</string>
    <string name="head_preferences">Preferences</string>
    <string name="head_reset_password">Reset Password</string>
    <string name="head_cloud_storage">Cloud Storage</string>
    <string name="head_sign_in">Sign In</string>
    <string name="head_sign_up">Sign Up</string>
    <string name="head_legal">Legal Disclaimer</string>
    <string name="head_logout">Confirm Logout</string>

    <!--Buttons-->
    <string name="button_next">Next</string>
    <string name="button_sign_in">Sign In</string>
    <string name="button_accept">Accept</string>
    <string name="button_ok">OK</string>
    <string name="button_skip">Skip</string>
    <string name="button_agree">Agree</string>
    <string name="button_disagree">Disagree</string>
    <string name="button_confirm">Confirm</string>
    <string name="button_send_link">Send Link</string>

    <!--Navigation-->
    <string name="nav_sign_in">Go to sign in</string>

    <!--Statements-->
    <string name="welcome_to_statement">Welcome to</string>
    <string name="sign_up_statement">Don\'t have an account? Sign Up</string>

    <!--EditText-->
    <string name="et_registered_email">Enter Registered Email Address</string>

    <!--Modes-->
    <string name="body_cam_mode">Clip / body cam mode (bluetooth) \n(feature coming soon)</string>
    <string name="dash_cam_mode">Dash cam / trip mode \n(feature coming soon)</string>

    <!--Permissions & Legal Disclaimer-->
    <string name="permission_camera">My camera front and back for audio &amp; video</string>
    <string name="permission_cloud">Cloud communication</string>
    <string name="permission_phone_lock">Manage Phone Lock, DND, Screen Dimming</string>
    <string name="permission_interface">Siri, Bixby, Google Api, Interface Command</string>
    <string name="permission_instruction">These are preferences that are put in place to enact upon startup of the app
        i.e. \"OK Google, Start CopWatch\" then CopWatch would open with these exact settings already in place. </string>
    <string name="permission_advance">In the event of my death or serious injury resulting in coma or vegetative state caused
    by or believed to be caused by the use of force from law enforcement, I authorize CopWatch and/or \"designated person\"
        permission to access my cloud for evidence to my benefit</string>
    <string name="legal_disclaimer_1">In the use of the free version of this app where audio and / or video is submitted
        as evidence in a civil lawsuit, CopWatch will receive 10% when damages are awarded to the client. Payment is
        not required from clients who have paid to go add free. This helps us cover expenses and keeps it possible
        to provide this free service for all. Thank you and you\'re welcome!\n\nCopWatch :) </string>
    <string name="legal_disclaimer_2">CopWatch will never in any way use your cloud recordings to assist law enforcement
    in your prosecution and has no obligation to assist law enforcement at any time for any reason.</string>

    <!--Errors-->
    <string name="error_terms_and_conditions">Please indicate that you accept our Terms and Conditions</string>
    <string name="error_first_name">First name is required</string>
    <string name="error_last_name">Last name is required</string>
    <string name="error_email_address">Email address is required</string>
    <string name="error_password">Password is required</string>
    <string name="error_password_limit">Password must be at least 6 characters</string>
    <string name="error_confirm_password">Please confirm password</string>
    <string name="error_password_match">Password doesn\'t match</string>
    <string name="error_login">Login failed</string>
    <string name="error_invalid_email">Must enter valid email</string>

    <!--Success-->
    <string name="success_login">Login successfully</string>
    <string name="success_sign_up">Sign-up Successfully</string>
    <string name="success_reset_password">Reset password link sent successfully</string>

    <string name="sample_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
        ut labore et dolore magna aliqua. Lectus proin nibh nisl condimentum. Turpis egestas maecenas pharetra convallis
        posuere. Elit ut aliquam purus sit amet. Vel eros donec ac odio. Vel facilisis volutpat est velit. Sit amet mauris
        commodo quis imperdiet massa tincidunt nunc pulvinar. Eu augue ut lectus arcu bibendum at varius vel pharetra.
        Feugiat scelerisque varius morbi enim nunc faucibus a. Ultricies mi quis hendrerit dolor magna. Nisl suscipit
        adipiscing bibendum est ultricies integer quis. Iaculis nunc sed augue lacus.\n\nJusto nec ultrices dui sapien
        eget mi proin sed. Ut venenatis tellus in metus. Facilisis leo vel fringilla estullamcorper eget nulla facilisi.
        Iaculis urna id volutpat lacus laoreet non. Cursus risus at ultrices mi tempus imperdiet nulla. Volutpat est velit
        egestas dui id ornare arcu odio. Tristique magna sit amet purus gravida quis blandit turpis cursus. Venenatis cras
        sed felis eget velit aliquet. Urna nec tincidunt praesent semper feugiat nibh sed pulvinar. Phasellus vestibulum
        lorem sed risus. Lacus vel facilisis volutpat est velit. Porttitor leo a diam sollicitudin. Cursus vitae congue
        mauris rhoncus aenean vel elit scelerisque.\n\nMassa sed elementum tempus egestas sed risus pretium. Consequat id
        porta nibh venenatis cras sed felis eget. Malesuada fames ac turpis egestas sed tempus urna et pharetra. Eget nullam
        non nisi est sit amet. Dignissim diam quis enim lobortis scelerisque fermentum dui. Mus mauris vitae ultricies leo
        integer malesuada nunc vel. Purus gravida quis blandit turpis cursus in. Rhoncus est pellentesque elit ullamcorper.
        Sit amet mattis vulputate enim nulla aliquet porttitor lacus. Felis bibendum ut tristique et egestas quis ipsum
        suspendisse ultrices. Nisi porta lorem mollis aliquam ut porttitor leo a diam. Et netus et malesuada fames ac turpis
        egestas. Purus viverra accumsan in nisl. Risus viverra adipiscing at in tellus integer. Etiam erat velit scelerisque
        in dictum non consectetur a.</string>
    <string name="sample_text2">Natoque penatibus et magnis dis parturient montes. Ultrices tincidunt arcu non sodales
        neque sodales. Duis tristique sollicitudin nibh sit amet. Morbi tristique senectus et netus. Mi ipsum faucibus
        vitae aliquet nec ullamcorper sit amet risus. Risus nullam eget felis eget nunc lobortis. Lobortis mattis aliquam
        faucibus purus in massa tempor. Egestas quis ipsum suspendisse ultrices. Vulputate odio ut enim blandit volutpat
        maecenas volutpat blandit aliquam. Pharetra diam sit amet nisl. Duis at tellus at urna. Nulla facilisi cras
        fermentum odio eu feugiat. Molestie at elementum eu facilisis sed odio morbi quis commodo. Odio facilisis mauris
        sit amet massa vitae. Consectetur libero id faucibus nisl tincidunt eget nullam non nisi. Quis vel eros donec
        ac odio tempor. Cum sociis natoque penatibus et magnis dis parturient montes nascetur. Urna cursus eget nunc
        celerisque.</string>
    <string name="cd_previous">Previous</string>
    <string name="cd_copwatch_logo">CopWatch Logo</string>
    <string name="num_2">2.</string>
    <string name="num_1">1.</string>

    <string name="permission_request">This app needs permission for camera and audio recording.</string>
    <string name="camera_error">This device doesn\'t support Camera2 API.</string>
    <string name="message_need_permission">Need Permissions</string>
    <string name="message_permission">This app needs permission to use this feature. You can grant them in app settings.</string>
    <string name="title_go_to_setting">GOTO SETTINGS</string>
</resources>