<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/rl_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <ImageView
            android:id="@+id/iv_prev"
            android:layout_width="@dimen/standard_touch_size"
            android:layout_height="@dimen/standard_touch_size"
            android:padding="9dp"
            android:layout_alignParentStart="true"
            android:layout_marginStart="8dp"
            android:src="@drawable/previous_icon" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/head_permissions"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_skip"
            android:layout_width="@dimen/standard_touch_size"
            android:layout_height="@dimen/standard_touch_size"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="20dp"
            android:text="@string/button_skip"
            android:textSize="16sp"
            android:gravity="center"
            android:visibility="invisible"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textStyle="bold" />

    </RelativeLayout>

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/blue_divider"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rl_header"
        app:layout_constraintVertical_bias="0.0" />

    <RelativeLayout
        android:id="@+id/rl_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        app:layout_constraintBottom_toTopOf="@+id/b_next"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider">

        <TextView
            android:id="@+id/tv_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:text="Check one"
            android:textColor="@color/blue_very_dark"
            android:textSize="18sp"
            android:textStyle="bold"
            android:visibility="invisible" />

        <FrameLayout
            android:id="@+id/fl_camera"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_label"
            android:layout_marginTop="25dp">

            <CheckBox
                android:id="@+id/cb_camera"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:theme="@style/colored_checkbox" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="6dp"
                android:minLines="2"
                android:text="@string/permission_camera"
                android:textColor="@color/blue_very_dark"
                android:textSize="18sp" />

        </FrameLayout>

        <FrameLayout
            android:id="@+id/fl_cloud"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/fl_camera"
            android:layout_marginTop="10dp">

            <CheckBox
                android:id="@+id/cb_cloud"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:theme="@style/colored_checkbox" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="6dp"
                android:minLines="2"
                android:text="@string/permission_cloud"
                android:textColor="@color/blue_very_dark"
                android:textSize="18sp" />

        </FrameLayout>

        <FrameLayout
            android:id="@+id/fl_lock"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/fl_cloud"
            android:layout_marginTop="10dp">

            <CheckBox
                android:id="@+id/cb_lock"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:theme="@style/colored_checkbox" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="6dp"
                android:minLines="2"
                android:text="@string/permission_phone_lock"
                android:textColor="@color/blue_very_dark"
                android:textSize="18sp" />

        </FrameLayout>

        <FrameLayout
            android:id="@+id/fl_interface"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/fl_lock"
            android:layout_marginTop="10dp">

            <CheckBox
                android:id="@+id/cb_interface"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:theme="@style/colored_checkbox" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="6dp"
                android:minLines="2"
                android:text="@string/permission_interface"
                android:textColor="@color/blue_very_dark"
                android:textSize="18sp" />
        </FrameLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="60dp"
            android:minLines="5"
            android:layout_below="@id/fl_interface"
            android:text="@string/permission_instruction"
            android:textColor="@color/blue_very_dark"
            android:textSize="18sp" />

    </RelativeLayout>

    <TextView
        android:id="@+id/tv_perm_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:minLines="2"
        android:text="Please select mode"
        android:textColor="@color/error_red"
        android:textSize="14sp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/b_perm_next"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/b_perm_next"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/round_buttons"
        android:text="Next"
        android:textSize="18sp"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>