<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:layout_marginTop="0dp"
            android:orientation="vertical"
            android:weightSum="1">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:fadeScrollbars="true"
                android:fadingEdgeLength="40dp"
                android:fillViewport="true"
                android:requiresFadingEdge="vertical"
                android:scrollbarFadeDuration="@android:integer/config_mediumAnimTime"
                android:scrollbarSize="2dp"
                android:scrollbarStyle="insideOverlay"
                android:scrollbars="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:orientation="vertical">

                    <androidx.cardview.widget.CardView
                        android:id="@+id/cv_logo"
                        android:layout_width="55dp"
                        android:layout_height="55dp"
                        android:layout_centerHorizontal="true"
                        android:layout_gravity="center"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="8dp"
                        app:cardCornerRadius="65dp">

                        <ImageView
                            android:id="@+id/iv_logo"
                            android:layout_width="55dp"
                            android:layout_height="55dp"
                            android:src="@drawable/ic_copwatch_logo" />

                    </androidx.cardview.widget.CardView>

                    <TextView
                        android:id="@+id/tv_intro"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="-10dp"
                        android:fontFamily="@font/aldrich"
                        android:text="@string/welcome_to_statement"
                        android:textAllCaps="true"
                        android:textColor="@color/blue_logo"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/tv_appName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:fontFamily="@font/aldrich"
                        android:text="@string/app_name"
                        android:textAllCaps="true"
                        android:textColor="@color/blue_logo"
                        android:textSize="24sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tv_desc"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:ems="30"
                        android:paddingStart="15dp"
                        android:paddingEnd="15dp"
                        android:text="@string/app_message_to_users"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textSize="20sp" />

                </LinearLayout>

            </ScrollView>

        </LinearLayout>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>