<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/rl_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <ImageView
            android:id="@+id/iv_prev"
            android:layout_width="@dimen/standard_touch_size"
            android:layout_height="@dimen/standard_touch_size"
            android:padding="9dp"
            android:layout_alignParentStart="true"
            android:layout_marginStart="8dp"
            android:src="@drawable/previous_icon" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/head_legal"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_skip"
            android:layout_width="@dimen/standard_touch_size"
            android:layout_height="@dimen/standard_touch_size"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="20dp"
            android:text="Skip"
            android:textSize="16sp"
            android:gravity="center"
            android:visibility="invisible"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textStyle="bold" />

    </RelativeLayout>

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/blue_divider"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rl_header"
        app:layout_constraintVertical_bias="0.0" />

    <RelativeLayout
        android:id="@+id/rl_main"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="40dp"
        app:layout_constraintBottom_toTopOf="@+id/b_next"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider">

        <TextView
            android:id="@+id/number_one"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="15dp"
            android:text="1."
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tv_disclaimer_one"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/number_one"
            android:layout_marginStart="8dp"
            android:layout_marginTop="15dp"
            android:text="@string/legal_disclaimer_1"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/number_two"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="30dp"
            android:layout_below="@id/tv_disclaimer_one"
            android:text="2."
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tv_disclaimer_two"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/number_one"
            android:layout_marginStart="8dp"
            android:layout_marginTop="30dp"
            android:layout_below="@id/tv_disclaimer_one"
            android:text="@string/legal_disclaimer_2"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="18sp" />

    </RelativeLayout>

    <Button
        android:id="@+id/b_next"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/round_buttons"
        android:text="Next"
        android:textSize="18sp"
        android:visibility="gone"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>